@@ -10,7 +10,6 @@ copy "changeLog.txt" "debug\changeLog.txt"
 copy "blocked_nations.txt" "debug\blocked_nations.txt"
 copy "unions.txt" "debug\unions.txt"
 copy "governmentMapping.txt" "debug\governmentMapping.txt"
-copy "unit_strength.txt" "debug\unit_strength.txt"
 copy "port_whitelist.txt" "debug\port_whitelist.txt"
 copy "port_blacklist.txt" "debug\port_blacklist.txt"
 copy "regiment_costs.txt" "debug\regiment_costs.txt"
