@@ -10,7 +10,6 @@ copy "changeLog.txt" "release\changeLog.txt"
 copy "blocked_nations.txt" "release\blocked_nations.txt"
 copy "unions.txt" "release\unions.txt"
 copy "governmentMapping.txt" "release\governmentMapping.txt"
-copy "unit_strength.txt" "release\unit_strength.txt"
 copy "port_whitelist.txt" "release\port_whitelist.txt"
 copy "port_blacklist.txt" "release\port_blacklist.txt"
 copy "regiment_costs.txt" "release\regiment_costs.txt"
