@@ -372,3 +372,4 @@ Revision	Version Updated		Log Message
 394		C++			Bill of Rights NI reduces slaves by 10%
 395		C++			Upper House determined by sliders.
 421		C++			Incorporate better political party code.
+422		C++			Build unit strengths on the fly from the EU3 folder if unit_strength.txt doesn't exist, and remove it by default.  Should make converting from mods easier.
